// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change orientation 1`] = `
<DocumentFragment>
  <hr
    aria-orientation="vertical"
    class="css-117cccq"
    data-chakra-component="CDivider"
    data-testid="divider"
  />
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <hr
    aria-orientation="horizontal"
    class="css-cgtghy"
    data-chakra-component="CDivider"
    data-testid="divider"
  />
</DocumentFragment>
`;
